--- a/.qoder/repowiki/zh/content/脚本系统/脚本系统.md
+++ b/.qoder/repowiki/zh/content/脚本系统/脚本系统.md
@@ -1,210 +1,278 @@
 # 脚本系统
 
 <cite>
-**本文档引用的文件**  
-- [check-task-prerequisites.sh](file://scripts/bash/check-task-prerequisites.sh)
-- [check-task-prerequisites.ps1](file://scripts/powershell/check-task-prerequisites.ps1)
+**本文档引用文件**  
 - [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
-- [create-new-feature.ps1](file://scripts/powershell/create-new-feature.ps1)
-- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh)
-- [update-agent-context.ps1](file://scripts/powershell/update-agent-context.ps1)
 - [setup-plan.sh](file://scripts/bash/setup-plan.sh)
-- [setup-plan.ps1](file://scripts/powershell/setup-plan.ps1)
+- [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh)
 - [common.sh](file://scripts/bash/common.sh)
+- [create-new-feature.ps1](file://scripts/powershell/create-new-feature.ps1)
+- [setup-plan.ps1](file://scripts/powershell/setup-plan.ps1)
+- [check-prerequisites.ps1](file://scripts/powershell/check-prerequisites.ps1)
 - [common.ps1](file://scripts/powershell/common.ps1)
+- [spec-template.md](file://templates/spec-template.md)
+- [plan-template.md](file://templates/plan-template.md)
+- [tasks-template.md](file://templates/tasks-template.md)
+- [specify.md](file://templates/commands/specify.md)
+- [plan.md](file://templates/commands/plan.md)
+- [tasks.md](file://templates/commands/tasks.md)
 </cite>
 
 ## 目录
-1. [简介](#简介)
+1. [引言](#引言)
 2. [项目结构](#项目结构)
-3. [核心脚本功能分析](#核心脚本功能分析)
-4. [脚本调用关系与数据流](#脚本调用关系与数据流)
-5. [Bash与PowerShell实现差异对比](#bash与powershell实现差异对比)
-6. [参数说明与使用示例](#参数说明与使用示例)
-7. [错误处理机制](#错误处理机制)
-8. [作为CLI工具补充的自动化能力](#作为cli工具补充的自动化能力)
-9. [高级用户扩展指南](#高级用户扩展指南)
+3. [核心组件](#核心组件)
+4. [架构概述](#架构概述)
+5. [详细组件分析](#详细组件分析)
+6. [依赖分析](#依赖分析)
+7. [性能考虑](#性能考虑)
+8. [故障排除指南](#故障排除指南)
+9. [结论](#结论)
 
-## 简介
-本项目包含一套完整的跨平台自动化脚本系统，位于`scripts`目录下，分为`bash`和`powershell`两个子目录，分别支持Linux/macOS和Windows平台。这些脚本协同工作，用于自动化新功能创建、任务依赖验证、计划设置和AI代理上下文同步等关键开发流程。所有脚本共享通用逻辑（通过`common.sh`和`common.ps1`），确保行为一致性，并通过JSON模式输出支持程序化调用。
+## 引言
+Spec-Kit脚本系统是一个自动化任务执行引擎，旨在通过标准化的脚本流程支持Spec-Driven Development方法论。该系统提供Bash和PowerShell两套脚本实现，以满足不同操作系统环境下的用户需求。脚本系统在开发流程中扮演关键角色，负责自动化创建功能分支、生成规范文件、设置技术实现计划以及验证环境依赖等核心任务。通过与模板文件和CLI工具的协同工作，脚本系统实现了开发流程的自动化和标准化，显著提升了开发效率和一致性。
 
 ## 项目结构
+Spec-Kit项目的脚本系统采用清晰的分层结构，将Bash和PowerShell脚本分别组织在独立的目录中，同时共享模板和公共函数。这种设计既保证了跨平台兼容性，又实现了代码复用。
 
 ```mermaid
-graph TD
-A[scripts] --> B[bash]
-A --> C[powershell]
-B --> D[check-task-prerequisites.sh]
-B --> E[create-new-feature.sh]
-B --> F[setup-plan.sh]
-B --> G[update-agent-context.sh]
-B --> H[common.sh]
-C --> I[check-task-prerequisites.ps1]
-C --> J[create-new-feature.ps1]
-C --> K[setup-plan.ps1]
-C --> L[update-agent-context.ps1]
-C --> M[common.ps1]
+graph TB
+subgraph "脚本"
+Bash[scripts/bash]
+PowerShell[scripts/powershell]
+end
+subgraph "模板"
+Templates[templates]
+Commands[templates/commands]
+end
+subgraph "内存"
+Memory[memory]
+end
+Bash --> Common[common.sh]
+PowerShell --> CommonPS[common.ps1]
+Bash --> CreateFeature[create-new-feature.sh]
+Bash --> SetupPlan[setup-plan.sh]
+Bash --> CheckPrereq[check-prerequisites.sh]
+PowerShell --> CreateFeaturePS[create-new-feature.ps1]
+PowerShell --> SetupPlanPS[setup-plan.ps1]
+PowerShell --> CheckPrereqPS[check-prerequisites.ps1]
+Templates --> SpecTemplate[spec-template.md]
+Templates --> PlanTemplate[plan-template.md]
+Templates --> TasksTemplate[tasks-template.md]
+Commands --> SpecifyCmd[specify.md]
+Commands --> PlanCmd[plan.md]
+Commands --> TasksCmd[tasks.md]
+CreateFeature --> Templates
+SetupPlan --> Templates
+CheckPrereq --> Templates
+CreateFeaturePS --> Templates
+SetupPlanPS --> Templates
+CheckPrereqPS --> Templates
 ```
 
-**图示来源**  
+**图示来源**
+- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
+- [setup-plan.sh](file://scripts/bash/setup-plan.sh)
+- [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh)
+- [spec-template.md](file://templates/spec-template.md)
+- [plan-template.md](file://templates/plan-template.md)
+- [tasks-template.md](file://templates/tasks-template.md)
+
+**本节来源**
 - [scripts/bash](file://scripts/bash)
 - [scripts/powershell](file://scripts/powershell)
+- [templates](file://templates)
 
-**本节来源**  
-- [scripts/bash](file://scripts/bash)
-- [scripts/powershell](file://scripts/powershell)
+## 核心组件
+Spec-Kit脚本系统的核心组件包括三个主要脚本：`create-new-feature`用于创建新功能分支并生成规范文件，`setup-plan`用于设置技术实现计划，`check-prerequisites`用于验证环境依赖。这些脚本通过调用公共函数库`common.sh`或`common.ps1`来获取项目路径和分支信息，确保了跨脚本的一致性。每个脚本都支持JSON输出模式，便于与其他工具集成。脚本系统与模板文件紧密协作，通过复制模板并填充实际内容来生成标准化的文档，从而实现了开发流程的自动化。
 
-## 核心脚本功能分析
+**本节来源**
+- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L98)
+- [setup-plan.sh](file://scripts/bash/setup-plan.sh#L1-L61)
+- [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L1-L166)
+- [common.sh](file://scripts/bash/common.sh#L1-L114)
 
-### check-task-prerequisites 脚本
-该脚本用于验证当前开发环境是否满足执行任务的先决条件。它检查是否处于正确的功能分支（以三位数字开头），并确认功能目录和`plan.md`文件是否存在。如果使用`--json`参数，将以JSON格式输出功能目录路径和可用文档列表。
+## 架构概述
+Spec-Kit脚本系统的架构设计体现了模块化和跨平台兼容性的原则。系统采用双栈设计，分别为Bash和PowerShell提供了功能对等的脚本实现。核心功能被抽象为公共函数库，避免了代码重复。脚本通过环境变量`SPECIFY_FEATURE`来跟踪当前处理的功能分支，确保了上下文的一致性。整个系统与模板文件和CLI工具形成了完整的自动化工作流，从功能创建到计划设置再到依赖验证，每个环节都通过脚本自动化完成。
 
-**本节来源**  
-- [check-task-prerequisites.sh](file://scripts/bash/check-task-prerequisites.sh#L1-L15)
-- [check-task-prerequisites.ps1](file://scripts/powershell/check-task-prerequisites.ps1#L1-L35)
+```mermaid
+graph LR
+User[用户] --> CLI[Specify CLI]
+CLI --> Script[脚本系统]
+Script --> Bash{Bash脚本}
+Script --> PowerShell{PowerShell脚本}
+Bash --> Common[common.sh]
+PowerShell --> CommonPS[common.ps1]
+Bash --> Templates[模板文件]
+PowerShell --> Templates
+Templates --> Output[输出文件]
+Script --> Git[Git仓库]
+Script --> Env[环境变量]
+subgraph "Bash脚本"
+BashCreate[create-new-feature.sh]
+BashSetup[setup-plan.sh]
+BashCheck[check-prerequisites.sh]
+end
+subgraph "PowerShell脚本"
+PS1Create[create-new-feature.ps1]
+PS1Setup[setup-plan.ps1]
+PS1Check[check-prerequisites.ps1]
+end
+BashCreate --> OutputSpec[specs/###-feature/spec.md]
+BashSetup --> OutputPlan[specs/###-feature/plan.md]
+BashCheck --> Validation[验证结果]
+```
 
-### create-new-feature 脚本
-此脚本自动化新功能的创建过程。它根据功能描述生成符合规范的分支名称（格式为`001-feature-name`），创建对应的Git分支和项目目录结构，并复制`spec-template.md`模板生成`spec.md`文件。脚本会自动递增功能编号，确保唯一性。
+**图示来源**
+- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
+- [setup-plan.sh](file://scripts/bash/setup-plan.sh)
+- [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh)
+- [common.sh](file://scripts/bash/common.sh)
 
-**本节来源**  
-- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L58)
-- [create-new-feature.ps1](file://scripts/powershell/create-new-feature.ps1#L1-L52)
+## 详细组件分析
 
-### update-agent-context 脚本
-该脚本负责同步AI代理的上下文信息。它从当前分支的`plan.md`文件中提取编程语言、框架、数据库等技术栈信息，并更新`CLAUDE.md`、`GEMINI.md`等代理配置文件。支持为Claude、Gemini、GitHub Copilot等多种AI工具更新上下文，自动维护“活跃技术”和“最近变更”列表。
+### create-new-feature脚本分析
+`create-new-feature`脚本负责创建新功能分支并初始化规范文件。脚本首先解析输入参数，然后确定仓库根目录，创建递增编号的功能分支，并生成对应的规范文件。
 
-**本节来源**  
-- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh#L1-L66)
-- [update-agent-context.ps1](file://scripts/powershell/update-agent-context.ps1#L1-L104)
+```mermaid
+sequenceDiagram
+participant User as "用户"
+participant Script as "create-new-feature"
+participant Git as "Git"
+participant FS as "文件系统"
+User->>Script : 执行脚本并提供功能描述
+Script->>Script : 解析命令行参数
+Script->>Script : 确定仓库根目录
+Script->>Script : 计算下一个功能编号
+Script->>Git : 创建新分支(如001-feature-name)
+Script->>FS : 创建功能目录
+Script->>FS : 复制spec-template.md到spec.md
+Script->>Script : 设置SPECIFY_FEATURE环境变量
+Script-->>User : 输出分支名称和文件路径
+```
 
-### setup-plan 脚本
-此脚本用于初始化功能开发计划。它确保功能目录存在，并将`plan-template.md`模板复制到当前功能目录下生成`plan.md`文件，为后续的计划制定提供标准结构。
+**图示来源**
+- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L98)
+- [create-new-feature.ps1](file://scripts/powershell/create-new-feature.ps1#L1-L118)
+- [spec-template.md](file://templates/spec-template.md)
 
-**本节来源**  
-- [setup-plan.sh](file://scripts/bash/setup-plan.sh#L1-L17)
-- [setup-plan.ps1](file://scripts/powershell/setup-plan.ps1#L1-L21)
+**本节来源**
+- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L98)
+- [create-new-feature.ps1](file://scripts/powershell/create-new-feature.ps1#L1-L118)
 
-## 脚本调用关系与数据流
+### setup-plan脚本分析
+`setup-plan`脚本用于设置技术实现计划，它验证当前分支的有效性，并复制计划模板以供后续填充。
 
 ```mermaid
 flowchart TD
-A[用户] --> B[create-new-feature]
-B --> C[common.sh/common.ps1]
-B --> D[Git]
-B --> E[文件系统]
-A --> F[setup-plan]
-F --> C
-F --> E
-A --> G[check-task-prerequisites]
-G --> C
-G --> H[plan.md]
-A --> I[update-agent-context]
-I --> H
-I --> J[CLAUDE.md等代理文件]
-G --> |"验证通过"| I
-F --> |"生成plan.md"| H
+Start([开始]) --> ParseArgs["解析命令行参数"]
+ParseArgs --> LoadCommon["加载common.sh"]
+LoadCommon --> GetPaths["获取功能路径"]
+GetPaths --> ValidateBranch["验证功能分支"]
+ValidateBranch --> CreateDir["创建功能目录"]
+CreateDir --> CopyTemplate["复制plan-template.md"]
+CopyTemplate --> CheckTemplate{"模板存在?"}
+CheckTemplate --> |是| OutputSuccess["输出成功信息"]
+CheckTemplate --> |否| CreateEmpty["创建空文件"]
+CreateEmpty --> OutputSuccess
+OutputSuccess --> End([结束])
 ```
 
-**图示来源**  
-- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
-- [setup-plan.sh](file://scripts/bash/setup-plan.sh)
-- [check-task-prerequisites.sh](file://scripts/bash/check-task-prerequisites.sh)
-- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh)
-- [common.sh](file://scripts/bash/common.sh)
+**图示来源**
+- [setup-plan.sh](file://scripts/bash/setup-plan.sh#L1-L61)
+- [setup-plan.ps1](file://scripts/powershell/setup-plan.ps1#L1-L62)
+- [plan-template.md](file://templates/plan-template.md)
 
-**本节来源**  
-- [scripts/bash](file://scripts/bash)
-- [scripts/powershell](file://scripts/powershell)
+**本节来源**
+- [setup-plan.sh](file://scripts/bash/setup-plan.sh#L1-L61)
+- [setup-plan.ps1](file://scripts/powershell/setup-plan.ps1#L1-L62)
 
-## Bash与PowerShell实现差异对比
+### check-prerequisites脚本分析
+`check-prerequisites`脚本验证执行特定开发阶段所需的先决条件，确保工作流程的完整性。
 
-| 特性 | Bash 实现 | PowerShell 实现 |
-|------|----------|----------------|
-| **参数处理** | 使用`for arg in "$@"`循环解析 | 使用`[CmdletBinding()]`和`param()`声明参数 |
-| **变量作用域** | 使用`local`关键字声明局部变量 | 函数参数自动为局部作用域 |
-| **路径拼接** | 使用`$REPO_ROOT/specs/$CURRENT_BRANCH`字符串拼接 | 使用`Join-Path` cmdlet进行跨平台路径拼接 |
-| **文件存在性检查** | 使用`[[ -f "$file" ]]`语法 | 使用`Test-Path -Path $path -PathType Leaf` |
-| **目录创建** | 使用`mkdir -p`命令 | 使用`New-Item -ItemType Directory -Force` |
-| **JSON输出** | 手动格式化字符串 | 使用`ConvertTo-Json` cmdlet生成标准JSON |
-| **错误处理** | 使用`set -e`和`exit 1` | 使用`$ErrorActionPreference = 'Stop'` |
-
-尽管实现语法不同，两个版本的脚本在功能和行为上保持高度一致，体现了良好的跨平台设计。
-
-**本节来源**  
-- [common.sh](file://scripts/bash/common.sh)
-- [common.ps1](file://scripts/powershell/common.ps1)
-- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
-- [create-new-feature.ps1](file://scripts/powershell/create-new-feature.ps1)
-
-## 参数说明与使用示例
-
-### 公共参数
-- `--json`: 以JSON格式输出结果，便于程序解析
-- `--help` 或 `-h`: 显示使用帮助
-
-### create-new-feature 使用示例
-```bash
-# 创建一个新功能
-./scripts/bash/create-new-feature.sh "用户登录功能"
-
-# 以JSON格式输出创建结果
-./scripts/bash/create-new-feature.sh --json "API性能优化"
+```mermaid
+classDiagram
+class CheckPrerequisites {
++JSON_MODE boolean
++REQUIRE_TASKS boolean
++INCLUDE_TASKS boolean
++PATHS_ONLY boolean
++main() void
++parse_args() void
++validate_prerequisites() boolean
++output_results() void
+}
+class CommonFunctions {
++get_repo_root() string
++get_current_branch() string
++get_feature_paths() map
++check_feature_branch() boolean
+}
+class TemplateFiles {
++spec-template.md
++plan-template.md
++tasks-template.md
+}
+CheckPrerequisites --> CommonFunctions : "使用"
+CheckPrerequisites --> TemplateFiles : "验证"
+CommonFunctions --> Git : "查询"
+CommonFunctions --> FileSystem : "读取"
 ```
 
-### update-agent-context 使用示例
-```bash
-# 更新所有AI代理的上下文
-./scripts/bash/update-agent-context.sh
+**图示来源**
+- [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L1-L166)
+- [check-prerequisites.ps1](file://scripts/powershell/check-prerequisites.ps1#L1-L148)
+- [common.sh](file://scripts/bash/common.sh)
 
-# 仅更新Claude代理的上下文
-./scripts/bash/update-agent-context.sh claude
+**本节来源**
+- [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L1-L166)
+- [check-prerequisites.ps1](file://scripts/powershell/check-prerequisites.ps1#L1-L148)
+
+## 依赖分析
+Spec-Kit脚本系统的组件之间存在清晰的依赖关系。主脚本依赖于公共函数库来获取项目上下文信息，同时依赖于模板文件来生成标准化的输出。Bash和PowerShell脚本实现之间不存在直接依赖，但它们共享相同的模板和功能逻辑。
+
+```mermaid
+graph TD
+CreateFeature[create-new-feature] --> Common[common.sh]
+SetupPlan[setup-plan] --> Common
+CheckPrereq[check-prerequisites] --> Common
+CreateFeaturePS[create-new-feature.ps1] --> CommonPS[common.ps1]
+SetupPlanPS[setup-plan.ps1] --> CommonPS
+CheckPrereqPS[check-prerequisites.ps1] --> CommonPS
+Common --> Git[Git命令]
+CommonPS --> Git
+CreateFeature --> SpecTemplate[spec-template.md]
+SetupPlan --> PlanTemplate[plan-template.md]
+CheckPrereq --> PlanTemplate
+CheckPrereq --> TasksTemplate[tasks-template.md]
+subgraph "模板依赖"
+SpecTemplate --> Commands[specify.md]
+PlanTemplate --> Commands[plan.md]
+TasksTemplate --> Commands[tasks.md]
+end
 ```
 
-**本节来源**  
-- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L58)
-- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh#L1-L66)
+**图示来源**
+- [common.sh](file://scripts/bash/common.sh#L1-L114)
+- [common.ps1](file://scripts/powershell/common.ps1#L1-L137)
+- [spec-template.md](file://templates/spec-template.md)
+- [plan-template.md](file://templates/plan-template.md)
+- [tasks-template.md](file://templates/tasks-template.md)
 
-## 错误处理机制
+**本节来源**
+- [common.sh](file://scripts/bash/common.sh#L1-L114)
+- [common.ps1](file://scripts/powershell/common.ps1#L1-L137)
 
-脚本系统实现了健壮的错误处理机制：
+## 性能考虑
+Spec-Kit脚本系统的设计考虑了执行效率和资源使用。脚本采用模块化设计，避免了重复的路径计算和环境检测。通过使用`set -e`选项，脚本能够在遇到错误时立即终止，防止无效操作的累积。公共函数库的引入减少了代码重复，提高了维护效率。脚本支持JSON输出模式，便于与其他自动化工具集成，减少了文本解析的开销。对于大型项目，建议使用持久化安装的CLI工具，以避免每次执行时的环境初始化开销。
 
-1. **前置条件检查**：`check-task-prerequisites`脚本在所有关键操作前运行，确保环境正确。
-2. **早期失败**：使用`set -e`（Bash）和`$ErrorActionPreference = 'Stop'`（PowerShell）确保任何命令失败立即终止脚本。
-3. **清晰的错误信息**：所有错误都提供明确的错误消息和解决建议（如"Run /specify first"）。
-4. **分支验证**：`common.sh`中的`check_feature_branch`函数确保用户在正确的功能分支上工作。
-5. **文件/目录存在性检查**：在访问文件前检查其是否存在，避免运行时错误。
+## 故障排除指南
+当使用Spec-Kit脚本系统时，可能会遇到一些常见问题。如果`create-new-feature`脚本无法确定仓库根目录，请确保在正确的目录中执行脚本或检查.git或.specify标记文件的存在。如果`setup-plan`脚本报告分支验证失败，请确认当前分支名称符合`###-feature-name`的命名约定。对于`check-prerequisites`脚本的依赖检查失败，应首先运行`/specify`命令创建功能结构，然后运行`/plan`命令生成实施计划。在非Git仓库中使用脚本时，系统会自动降级到基于文件系统的路径检测，但某些Git相关功能将不可用。
 
-**本节来源**  
-- [common.sh](file://scripts/bash/common.sh#L1-L37)
-- [common.ps1](file://scripts/powershell/common.ps1#L1-L65)
-- [check-task-prerequisites.sh](file://scripts/bash/check-task-prerequisites.sh#L1-L15)
+**本节来源**
+- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L98)
+- [setup-plan.sh](file://scripts/bash/setup-plan.sh#L1-L61)
+- [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L1-L166)
 
-## 作为CLI工具补充的自动化能力
-
-这些脚本系统与CLI工具形成互补，实现了更复杂的自动化任务：
-
-- **CLI工具**：通常负责原子性操作，如`/specify`、`/plan`等。
-- **脚本系统**：负责协调多个步骤，实现端到端的自动化流程，如`create-new-feature`脚本协调了Git分支创建、目录结构生成和文件初始化等多个操作。
-
-脚本系统通过读取和解析`plan.md`等CLI工具生成的文件，实现了与CLI生态的无缝集成。
-
-**本节来源**  
-- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
-- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh)
-
-## 高级用户扩展指南
-
-高级用户可以按以下方式修改或扩展脚本：
-
-1. **修改模板路径**：调整脚本中`TEMPLATE`变量的值以使用自定义模板。
-2. **扩展技术栈支持**：在`update-agent-context`脚本中添加新的语言/框架检测逻辑和对应的测试命令。
-3. **添加新代理支持**：在`update-agent-context`的`case`语句中添加对新AI代理的支持。
-4. **自定义分支命名规则**：修改`create-new-feature`脚本中的正则表达式和字符串处理逻辑。
-5. **添加预/后处理钩子**：在脚本关键位置添加自定义命令执行点。
-
-所有修改都应在两个平台（Bash和PowerShell）上保持同步，以确保跨平台一致性。
-
-**本节来源**  
-- [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
-- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh)
-- [common.sh](file://scripts/bash/common.sh)
+## 结论
+Spec-Kit脚本系统通过提供Bash和PowerShell两套实现，成功实现了跨平台的自动化任务执行。系统设计体现了模块化、可维护性和用户友好的原则。核心脚本`create-new-feature`、`setup-plan`和`check-prerequisites`构成了开发流程的骨架，通过与模板文件的协同工作，实现了从功能创建到计划设置再到依赖验证的完整自动化。公共函数库的设计避免了代码重复，提高了系统的可维护性。对于希望扩展或修改自动化流程的高级用户，建议遵循现有的编码规范，保持JSON输出模式的一致性，并在修改公共函数时充分考虑对所有依赖脚本的影响。
