--- a/.qoder/repowiki/zh/content/故障排除.md
+++ b/.qoder/repowiki/zh/content/故障排除.md
@@ -4,273 +4,204 @@
 **本文档中引用的文件**  
 - [README.md](file://README.md)
 - [SUPPORT.md](file://SUPPORT.md)
-- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py)
+- [scripts/bash/check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh)
+- [scripts/powershell/check-prerequisites.ps1](file://scripts/powershell/check-prerequisites.ps1)
+- [scripts/bash/common.sh](file://scripts/bash/common.sh)
+- [scripts/powershell/common.ps1](file://scripts/powershell/common.ps1)
 </cite>
 
 ## 目录
 1. [简介](#简介)
-2. [常见问题分类](#常见问题分类)
-3. [系统健康检查](#系统健康检查)
-4. [调试技巧](#调试技巧)
-5. [错误代码列表](#错误代码列表)
-6. [寻求社区支持](#寻求社区支持)
+2. [安装问题](#安装问题)
+3. [环境检查问题](#环境检查问题)
+4. [AI代理连接问题](#ai代理连接问题)
+5. [脚本执行错误](#脚本执行错误)
+6. [诊断技巧](#诊断技巧)
 
 ## 简介
-本指南旨在帮助用户解决在使用spec-kit过程中可能遇到的各种问题。基于项目文档中的信息，我们将常见问题进行分类整理，并提供详细的诊断步骤和解决方案。本指南涵盖了安装失败、依赖检查错误、模板下载超时、AI连接问题等常见场景，同时介绍了如何利用`specify check`命令进行系统健康检查，以及如何启用详细日志模式或手动执行脚本来隔离问题。
+本指南旨在帮助用户解决在使用Spec-Kit过程中可能遇到的常见问题。基于README.md和SUPPORT.md中的信息，系统性地列出问题类别，如安装失败、环境检查报错、AI代理连接问题、脚本执行错误等。针对每个问题，提供清晰的症状描述、可能的原因分析和分步的解决方案。
 
-**Section sources**
-- [README.md](file://README.md#L1-L443)
-- [SUPPORT.md](file://SUPPORT.md#L1-L19)
+## 安装问题
 
-## 常见问题分类
+### 安装命令未找到
+**症状**：运行`uv tool install specify-cli --from git+https://github.com/github/spec-kit.git`时提示命令未找到。
 
-### 安装失败
-当用户尝试安装spec-kit时，可能会遇到各种安装失败的问题。这些问题通常与网络连接、权限设置或依赖项缺失有关。
+**可能原因**：
+- `uv`工具未安装
+- `uv`未正确添加到PATH环境变量
 
-**诊断步骤：**
-1. 检查网络连接是否正常
-2. 确认是否有足够的磁盘空间
-3. 验证Python版本是否符合要求（Python 3.11+）
-4. 检查uv包管理器是否已正确安装
-
-**解决方案：**
-- 如果网络连接不稳定，尝试使用代理或更换网络环境
-- 确保有足够的磁盘空间来完成安装
-- 升级到支持的Python版本
-- 重新安装uv包管理器
-
-```mermaid
-flowchart TD
-Start([开始安装]) --> CheckNetwork["检查网络连接"]
-CheckNetwork --> NetworkOK{"网络正常?"}
-NetworkOK --> |否| FixNetwork["修复网络问题"]
-NetworkOK --> |是| CheckPython["检查Python版本"]
-CheckPython --> PythonOK{"版本正确?"}
-PythonOK --> |否| UpgradePython["升级Python"]
-PythonOK --> |是| CheckUv["检查uv包管理器"]
-CheckUv --> UvOK{"uv已安装?"}
-UvOK --> |否| InstallUv["安装uv"]
-UvOK --> |是| ProceedInstall["继续安装"]
-ProceedInstall --> End([安装完成])
-```
-
-**Diagram sources**
-- [README.md](file://README.md#L1-L443)
-
-### 依赖检查错误
-在初始化项目时，spec-kit会检查所需的工具和依赖项。如果某些依赖项缺失或版本不兼容，可能会导致依赖检查错误。
-
-**诊断步骤：**
-1. 运行`specify check`命令查看哪些工具缺失
-2. 检查缺失工具的安装路径是否正确配置
-3. 验证工具版本是否符合要求
-
-**解决方案：**
-- 根据提示安装缺失的工具
-- 将工具的可执行文件路径添加到系统PATH环境变量中
-- 更新到兼容的工具版本
-
-```mermaid
-flowchart TD
-StartCheck([运行specify check]) --> ListTools["列出所有检查的工具"]
-ListTools --> CheckGit["检查Git"]
-ListTools --> CheckClaude["检查Claude CLI"]
-ListTools --> CheckGemini["检查Gemini CLI"]
-ListTools --> CheckVSCode["检查VS Code"]
-CheckGit --> GitStatus{"Git可用?"}
-CheckClaude --> ClaudeStatus{"Claude CLI可用?"}
-CheckGemini --> GeminiStatus{"Gemini CLI可用?"}
-CheckVSCode --> VSCodeStatus{"VS Code可用?"}
-GitStatus --> |否| InstallGit["安装Git"]
-ClaudeStatus --> |否| InstallClaude["安装Claude CLI"]
-GeminiStatus --> |否| InstallGemini["安装Gemini CLI"]
-VSCodeStatus --> |否| InstallVSCode["安装VS Code"]
-GitStatus --> |是| NextStep
-ClaudeStatus --> |是| NextStep
-GeminiStatus --> |是| NextStep
-VSCodeStatus --> |是| NextStep
-NextStep --> Summary["生成检查摘要"]
-Summary --> End([检查完成])
-```
-
-**Diagram sources**
-- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L990-L1029)
-
-### 模板下载超时
-在初始化项目时，spec-kit需要从GitHub下载最新的模板。如果网络连接不稳定或GitHub服务暂时不可用，可能会导致模板下载超时。
-
-**诊断步骤：**
-1. 检查网络连接是否正常
-2. 验证是否可以访问GitHub
-3. 检查防火墙设置是否阻止了下载请求
-
-**解决方案：**
-- 尝试使用不同的网络环境
-- 配置代理服务器以访问GitHub
-- 使用`--skip-tls`选项跳过SSL/TLS验证（不推荐）
-- 手动下载模板并解压到项目目录
-
-```mermaid
-flowchart TD
-StartDownload([开始下载模板]) --> CheckNetwork["检查网络连接"]
-CheckNetwork --> NetworkOK{"网络正常?"}
-NetworkOK --> |否| FixNetwork["修复网络问题"]
-NetworkOK --> |是| CheckGitHub["检查GitHub访问"]
-CheckGitHub --> GitHubOK{"可访问GitHub?"}
-GitHubOK --> |否| UseProxy["使用代理"]
-GitHubOK --> |是| StartDownloadProcess["开始下载过程"]
-StartDownloadProcess --> DownloadProgress["显示下载进度"]
-DownloadProgress --> Timeout{"下载超时?"}
-Timeout --> |是| RetryDownload["重试下载"]
-Timeout --> |否| ExtractTemplate["解压模板"]
-RetryDownload --> RetryCount{"重试次数达到上限?"}
-RetryCount --> |是| ManualDownload["手动下载"]
-RetryCount --> |否| StartDownloadProcess
-ManualDownload --> End([手动完成])
-ExtractTemplate --> End
-```
-
-**Diagram sources**
-- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L420-L518)
-
-### AI连接问题
-当用户选择特定的AI助手（如Claude Code、Gemini CLI等）时，可能会遇到AI连接问题。这些问题通常与AI工具未正确安装或配置有关。
-
-**诊断步骤：**
-1. 确认所选AI助手是否已安装
-2. 检查AI助手的API密钥是否正确配置
-3. 验证AI助手的服务是否正常运行
-
-**解决方案：**
-- 根据提示安装所需的AI助手
-- 配置正确的API密钥
-- 重启AI助手服务
-- 使用`--ignore-agent-tools`选项跳过AI工具检查
-
-```mermaid
-flowchart TD
-StartAI([选择AI助手]) --> CheckAI["检查AI助手安装"]
-CheckAI --> AISelected{"选择了AI助手?"}
-AISelected --> |否| SelectAI["选择AI助手"]
-AISelected --> |是| CheckInstallation["检查安装状态"]
-CheckInstallation --> Installed{"已安装?"}
-Installed --> |否| InstallAI["安装AI助手"]
-Installed --> |是| CheckAPIKey["检查API密钥"]
-CheckAPIKey --> APIKeyValid{"API密钥有效?"}
-APIKeyValid --> |否| ConfigureAPIKey["配置API密钥"]
-APIKeyValid --> |是| CheckService["检查服务状态"]
-CheckService --> ServiceRunning{"服务运行中?"}
-ServiceRunning --> |否| StartService["启动服务"]
-ServiceRunning --> |是| ReadyToUse["准备使用"]
-ReadyToUse --> End([AI连接成功])
-```
-
-**Diagram sources**
-- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L724-L986)
-
-## 系统健康检查
-`specify check`命令是诊断spec-kit环境健康状况的重要工具。该命令会检查所有必需的工具是否已正确安装和配置。
-
-**使用方法：**
+**解决方案**：
+1. 首先安装`uv`：
 ```bash
-specify check
+curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+pipx install uv
+```
+2. 验证`uv`是否在PATH中：
+```bash
+uv --version
+```
+3. 如果未找到，将`uv`的安装目录添加到PATH环境变量。
+
+**Section sources**
+- [README.md](file://README.md#L100-L120)
+
+## 环境检查问题
+
+### `specify check`命令报错
+**症状**：运行`specify check`命令时报告某些工具未找到。
+
+**可能原因**：
+- 所需工具未安装
+- 工具未正确添加到PATH环境变量
+- 系统架构不匹配
+
+**解决方案**：
+1. 检查PATH环境变量：
+```bash
+echo $PATH
+```
+2. 验证特定工具是否可执行：
+```bash
+which git
+which python
+```
+3. 如果工具已安装但不在PATH中，添加其安装路径：
+```bash
+export PATH=$PATH:/path/to/tool
+```
+4. 对于Windows用户，确保在PowerShell或命令提示符中正确配置环境变量。
+
+**Section sources**
+- [README.md](file://README.md#L55-L60)
+- [scripts/bash/check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L70-L100)
+
+## AI代理连接问题
+
+### AI代理工具未检测到
+**症状**：`specify init`命令无法检测到已安装的AI代理（如Claude Code、Gemini CLI等）。
+
+**可能原因**：
+- AI代理未正确安装
+- AI代理的可执行文件不在PATH中
+- 代理版本不兼容
+
+**解决方案**：
+1. 使用`--ignore-agent-tools`标志跳过代理检查：
+```bash
+specify init <project_name> --ai claude --ignore-agent-tools
+```
+2. 手动验证AI代理是否可执行：
+```bash
+claude --version
+gemini --version
+```
+3. 如果代理已安装但不可执行，将其安装目录添加到PATH环境变量。
+4. 检查代理文档以确保安装正确。
+
+**Section sources**
+- [README.md](file://README.md#L200-L210)
+- [scripts/bash/check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L103-L110)
+
+## 脚本执行错误
+
+### 特征目录未找到
+**症状**：脚本报告"Feature directory not found"错误。
+
+**可能原因**：
+- 未运行`/specify`命令创建特征结构
+- 当前不在正确的Git分支上
+- 项目结构不符合预期
+
+**解决方案**：
+1. 确保已运行`/specify`命令：
+```bash
+/specify 描述你的项目需求
+```
+2. 验证当前Git分支命名是否符合规范（如`001-feature-name`）：
+```bash
+git branch --show-current
+```
+3. 如果使用非Git仓库，确保`SPECIFY_FEATURE`环境变量已设置：
+```bash
+export SPECIFY_FEATURE=001-my-feature
 ```
 
-**检查内容：**
-- Git版本控制系统
-- Claude Code CLI
-- Gemini CLI
-- Qwen Code CLI
-- VS Code（用于GitHub Copilot）
-- Cursor IDE代理（可选）
-- opencode
+### 计划文件未找到
+**症状**：脚本报告"plan.md not found"错误。
 
-**输出示例：**
+**可能原因**：
+- 未运行`/plan`命令创建实施计划
+- 计划文件未生成在预期位置
+
+**解决方案**：
+1. 运行`/plan`命令创建实施计划：
+```bash
+/plan 描述你的技术栈和架构选择
 ```
-Check Available Tools
-● Git version control (available)
-● Claude Code CLI (available)
-● Gemini CLI (not found - Install from: https://github.com/google-gemini/gemini-cli)
-● Qwen Code CLI (available)
-● VS Code (for GitHub Copilot) (available)
-● Cursor IDE agent (optional) (not found - Install from: https://cursor.sh/)
-● opencode (available)
+2. 验证计划文件是否存在：
+```bash
+ls specs/$(git branch --show-current)/plan.md
+```
+
+### 任务文件未找到
+**症状**：脚本报告"tasks.md not found"错误。
+
+**可能原因**：
+- 未运行`/tasks`命令生成任务列表
+- 实施阶段缺少必要文件
+
+**解决方案**：
+1. 运行`/tasks`命令生成任务列表：
+```bash
+/tasks
+```
+2. 验证任务文件是否存在：
+```bash
+ls specs/$(git branch --show-current)/tasks.md
 ```
 
 **Section sources**
-- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L990-L1029)
+- [scripts/bash/check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L103-L120)
+- [scripts/powershell/check-prerequisites.ps1](file://scripts/powershell/check-prerequisites.ps1#L89-L102)
 
-## 调试技巧
+## 诊断技巧
 
-### 启用详细日志模式
-当遇到难以诊断的问题时，可以启用详细日志模式来获取更多调试信息。
-
-**启用方法：**
-在`specify init`命令中添加`--debug`选项：
+### 查看详细错误日志
+**方法**：
+1. 使用`--debug`标志启用详细输出：
 ```bash
 specify init my-project --ai claude --debug
 ```
+2. 检查脚本输出中的具体错误信息。
+3. 根据错误信息定位问题根源。
 
-**日志内容：**
-- Python版本
-- 平台信息
-- 当前工作目录
-- 网络请求详细信息
-- 文件操作记录
+### 验证Git分支
+**方法**：
+1. 检查当前分支是否为特征分支：
+```bash
+git branch --show-current
+```
+2. 特征分支应以三位数字开头，如`001-feature-name`。
+3. 如果不在特征分支上，切换到正确的分支或创建新分支。
 
-### 手动执行脚本
-对于复杂的安装或配置问题，可以手动执行相关脚本来隔离问题。
+### 检查环境变量
+**方法**：
+1. 验证`SPECIFY_FEATURE`环境变量：
+```bash
+echo $SPECIFY_FEATURE
+```
+2. 如果需要，设置该变量：
+```bash
+export SPECIFY_FEATURE=001-my-feature
+```
 
-**常用脚本：**
-- `check-task-prerequisites.sh`：检查任务先决条件
-- `common.sh`：通用脚本功能
-- `create-new-feature.sh`：创建新功能
-- `get-feature-paths.sh`：获取功能路径
-- `setup-plan.sh`：设置计划
-- `update-agent-context.sh`：更新代理上下文
-
-**执行步骤：**
-1. 导航到scripts目录
-2. 根据需要选择相应的脚本
-3. 使用适当的参数执行脚本
-4. 分析输出结果
-
-**Section sources**
-- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L724-L986)
-
-## 错误代码列表
-以下是spec-kit中可能出现的错误代码及其含义：
-
-| 错误代码 | 含义 | 解决方案 |
-|---------|------|---------|
-| 1 | 参数验证失败 | 检查命令参数是否正确 |
-| 2 | 工具未找到 | 安装缺失的工具 |
-| 3 | 网络连接失败 | 检查网络连接或使用代理 |
-| 4 | 文件操作失败 | 检查文件权限或磁盘空间 |
-| 5 | 解压失败 | 验证ZIP文件完整性 |
-| 6 | Git初始化失败 | 检查Git配置或权限 |
+### 使用路径仅模式
+**方法**：
+使用`--paths-only`选项仅输出路径变量，帮助诊断路径问题：
+```bash
+./scripts/bash/check-prerequisites.sh --paths-only
+```
 
 **Section sources**
-- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L724-L986)
-
-## 寻求社区支持
-如果以上方法都无法解决问题，用户可以通过以下途径寻求社区支持：
-
-### 提交问题报告
-1. 访问[GitHub Issues](https://github.com/github/spec-kit/issues/new)
-2. 搜索现有问题以避免重复提交
-3. 提供详细的错误信息和重现步骤
-4. 包括`specify check`命令的输出结果
-5. 如果可能，提供启用`--debug`选项后的日志输出
-
-### 获取帮助
-- 查看[全面指南](./spec-driven.md)了解Spec-Driven Development流程
-- 阅读[README](./README.md)获取入门说明和故障排除提示
-- 加入社区讨论获取实时帮助
-
-**项目状态：**
-spec-kit正处于积极开发和维护中，由GitHub员工和社区共同维护。我们会在合理的时间内响应支持请求、功能需求和社区问题。
-
-**Section sources**
-- [SUPPORT.md](file://SUPPORT.md#L1-L19)
-- [README.md](file://README.md#L1-L443)
+- [scripts/bash/check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L130-L150)
+- [scripts/powershell/check-prerequisites.ps1](file://scripts/powershell/check-prerequisites.ps1#L60-L80)
