--- a/.qoder/repowiki/zh/content/贡献指南.md
+++ b/.qoder/repowiki/zh/content/贡献指南.md
@@ -3,295 +3,237 @@
 <cite>
 **本文档中引用的文件**  
 - [CONTRIBUTING.md](file://CONTRIBUTING.md)
-- [CODE_OF_CONDUCT.md](file://CODE_OF_CONDUCT.md)
+- [AGENTS.md](file://AGENTS.md)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py)
 - [README.md](file://README.md)
-- [spec-driven.md](file://spec-driven.md)
-- [scripts/bash/create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
-- [scripts/bash/setup-plan.sh](file://scripts/bash/setup-plan.sh)
-- [scripts/bash/common.sh](file://scripts/bash/common.sh)
-- [templates/spec-template.md](file://templates/spec-template.md)
-- [templates/plan-template.md](file://templates/plan-template.md)
-- [templates/tasks-template.md](file://templates/tasks-template.md)
-- [memory/constitution.md](file://memory/constitution.md)
+- [pyproject.toml](file://pyproject.toml)
+- [CHANGELOG.md](file://CHANGELOG.md)
+- [scripts/bash/update-agent-context.sh](file://scripts/bash/update-agent-context.sh)
+- [scripts/powershell/update-agent-context.ps1](file://scripts/powershell/update-agent-context.ps1)
 </cite>
 
 ## 目录
 1. [简介](#简介)
-2. [开发环境设置](#开发环境设置)
-3. [贡献流程](#贡献流程)
-4. [分支策略与项目结构](#分支策略与项目结构)
-5. [代码风格与模板要求](#代码风格与模板要求)
-6. [测试流程](#测试流程)
-7. [Pull Request 审查标准](#pull-request-审查标准)
-8. [行为准则](#行为准则)
-9. [贡献示例](#贡献示例)
-10. [故障排除](#故障排除)
+2. [报告问题与功能请求](#报告问题与功能请求)
+3. [提交代码更改](#提交代码更改)
+4. [扩展点：添加新的AI代理支持](#扩展点添加新的ai代理支持)
+5. [代码风格与测试要求](#代码风格与测试要求)
+6. [提交信息规范](#提交信息规范)
+7. [结论](#结论)
 
 ## 简介
 
-欢迎为 Spec Kit 项目贡献代码！我们非常感谢您对本项目的参与。所有贡献均根据项目的开源许可证向公众发布。
+欢迎为Spec-Kit项目做出贡献！本项目旨在通过Spec-Driven Development（SDD）方法论，帮助开发者在构建软件时专注于产品场景而非编写重复性代码。您的贡献将有助于完善这一工具包，使其支持更多AI代理并提升开发效率。
 
-本指南整合了 [CONTRIBUTING.md](file://CONTRIBUTING.md) 和 [CODE_OF_CONDUCT.md](file://CODE_OF_CONDUCT.md) 的内容，旨在为新贡献者提供清晰、逐步的指引，帮助您顺利完成首次贡献。无论您是提交代码、报告问题还是改进文档，都可以通过本指南了解完整的流程和要求。
-
-**Section sources**
-- [CONTRIBUTING.md](file://CONTRIBUTING.md#L1-L53)
-- [CODE_OF_CONDUCT.md](file://CODE_OF_CONDUCT.md#L1-L73)
-
-## 开发环境设置
-
-在开始贡献之前，您需要完成以下一次性安装，以确保能够本地测试您的更改。
-
-### 必备工具
-
-1. **Python 3.11+**：请从 [Python 官方网站](https://www.python.org/downloads/) 下载并安装。
-2. **uv**：用于包管理，请参考 [uv 官方文档](https://docs.astral.sh/uv/) 进行安装。
-3. **Git**：请从 [Git 官方网站](https://git-scm.com/downloads) 下载并安装。
-4. **AI 编码助手**：您需要配置一个 AI 编码助手，支持的选项包括：
-   - [Claude Code](https://www.anthropic.com/claude-code)
-   - [GitHub Copilot](https://code.visualstudio.com/)
-   - [Gemini CLI](https://github.com/google-gemini/gemini-cli)
-   - [Qwen Code](https://github.com/QwenLM/qwen-code)
-
-### 初始化项目
-
-使用 `specify` CLI 工具初始化您的项目：
-
-```bash
-uvx --from git+https://github.com/github/spec-kit.git specify init <PROJECT_NAME>
-```
-
-该命令会自动检查您的环境，并根据您选择的 AI 助手（通过 `--ai` 参数指定）配置项目。
+本指南将详细介绍如何报告问题、提出功能请求以及提交代码更改。特别地，我们将深入探讨一个关键的扩展点：如何为新的AI代理添加支持。通过结合`AGENTS.md`中的信息和`src/specify_cli/__init__.py`中的代码实现，您将学习到需要修改的文件（如`AI_CHOICES`字典、`agent_folder_map`映射）和需要添加的资源（如新的模板文件夹）。此外，我们还将涵盖代码风格、测试要求和提交信息规范，以确保贡献的质量和一致性。
 
 **Section sources**
-- [CONTRIBUTING.md](file://CONTRIBUTING.md#L7-L18)
-- [README.md](file://README.md#L105-L112)
+- [CONTRIBUTING.md](file://CONTRIBUTING.md#L1-L110)
+- [README.md](file://README.md#L1-L582)
 
-## 贡献流程
+## 报告问题与功能请求
 
-以下是提交 Pull Request (PR) 的标准流程。
+当您在使用Spec-Kit时遇到问题或有新的功能想法时，可以通过GitHub Issues进行报告。请遵循以下步骤：
 
-### 提交 Pull Request
+1. **搜索现有问题**：在提交新问题之前，请先搜索是否已有类似的问题被提出。这有助于避免重复工作。
+2. **选择合适的问题模板**：GitHub仓库提供了问题模板，包括“Bug Report”和“Feature Request”。请选择最适合您情况的模板。
+3. **提供详细信息**：
+   - 对于Bug报告，请提供复现步骤、预期行为、实际行为以及您的环境信息（操作系统、Python版本等）。
+   - 对于功能请求，请详细描述您希望实现的功能及其对项目的潜在价值。
+4. **披露AI使用情况**：如果您在撰写问题或功能请求时使用了AI辅助，请在描述中明确说明。例如：“此问题描述由GitHub Copilot生成。”
+
+**Section sources**
+- [CONTRIBUTING.md](file://CONTRIBUTING.md#L1-L110)
+- [README.md](file://README.md#L1-L582)
+
+## 提交代码更改
+
+提交代码更改是为Spec-Kit项目做贡献的核心方式。请遵循以下流程以确保您的更改能够顺利被接受：
+
+1. **Fork并克隆仓库**：首先，Fork Spec-Kit仓库到您的个人账户，然后将其克隆到本地。
+2. **安装依赖**：使用`uv sync`命令安装项目所需的依赖项。
+3. **创建新分支**：基于主分支创建一个新分支，用于您的更改。建议使用描述性的分支名称，例如`add-windsurf-support`。
+4. **进行更改**：在新分支上进行您的代码更改。确保遵循项目的编码规范。
+5. **编写测试**：为新功能编写相应的测试用例，并确保所有现有测试仍然通过。
+6. **推送并提交Pull Request**：将您的更改推送到Fork的仓库，并提交一个Pull Request（PR）。在PR描述中，请详细说明您的更改内容和目的。
 
 >[!NOTE]
->如果您的 PR 引入了重大变更（例如引入新模板、新参数或对 CLI 的核心功能产生影响），请确保**事先与项目维护者讨论并达成一致**。未经事先讨论的重大变更 PR 将被关闭。
-
-1. Fork 并克隆仓库
-2. 配置并安装依赖项：`uv sync`
-3. 验证 CLI 是否正常工作：`uv run specify --help`
-4. 创建新分支：`git checkout -b my-branch-name`
-5. 进行更改，添加测试，并确保所有功能正常
-6. 如有必要，使用示例项目测试 CLI 功能
-7. 推送到您的 fork 并提交 PR
-8. 等待 PR 被审查和合并
+>如果您的PR引入了重大变更（例如，引入新的模板、参数或对CLI的重大修改），请确保在提交PR之前与项目维护者进行讨论并获得同意。未经事先讨论的重大变更PR可能会被关闭。
 
 **Section sources**
-- [CONTRIBUTING.md](file://CONTRIBUTING.md#L20-L47)
+- [CONTRIBUTING.md](file://CONTRIBUTING.md#L1-L110)
 
-## 分支策略与项目结构
+## 扩展点：添加新的AI代理支持
 
-本项目采用基于功能的分支策略，确保每个功能变更都在独立的分支中进行。
+为Spec-Kit添加对新AI代理的支持是一个重要的扩展点。以下是详细的步骤指南，以Windsurf为例说明如何完成这一过程。
 
-### 分支命名
+### 1. 更新AI_CHOICES常量
 
-分支名称遵循 `###-feature-name` 的格式，其中 `###` 是一个三位数的序号，`feature-name` 是功能描述的连字符形式。
+首先，需要在`src/specify_cli/__init__.py`文件中更新`AI_CHOICES`字典，以包含新的AI代理。例如，添加Windsurf支持：
 
-例如：`001-create-taskify`
-
-### 项目结构
-
-项目的核心结构如下：
-
-```text
-.
-├── memory
-│   ├── constitution.md          # 项目宪法，定义核心原则
-│   └── constitution_update_checklist.md
-├── scripts
-│   ├── bash                     # Bash 脚本
-│   └── powershell               # PowerShell 脚本
-├── specs                      # 功能规格文档目录
-│   └── ###-feature-name
-│       ├── spec.md              # 功能规格
-│       ├── plan.md              # 实现计划
-│       ├── tasks.md             # 任务列表
-│       ├── research.md          # 研究文档
-│       ├── data-model.md        # 数据模型
-│       ├── quickstart.md        # 快速入门
-│       └── contracts            # API 合同
-├── templates
-│   ├── spec-template.md         # 规格模板
-│   ├── plan-template.md         # 计划模板
-│   └── tasks-template.md        # 任务模板
-└── src/specify_cli              # CLI 源代码
+```python
+AI_CHOICES = {
+    "copilot": "GitHub Copilot",
+    "claude": "Claude Code", 
+    "gemini": "Gemini CLI",
+    "cursor": "Cursor",
+    "qwen": "Qwen Code",
+    "opencode": "opencode",
+    "windsurf": "Windsurf"  # 添加新代理
+}
 ```
 
-**Section sources**
-- [README.md](file://README.md#L15-L35)
-- [spec-driven.md](file://spec-driven.md#L300-L320)
+同时，更新`agent_folder_map`以包含新代理的文件夹路径：
 
-## 代码风格与模板要求
+```python
+agent_folder_map = {
+    "claude": ".claude/",
+    "gemini": ".gemini/",
+    "cursor": ".cursor/",
+    "qwen": ".qwen/",
+    "opencode": ".opencode/",
+    "windsurf": ".windsurf/",  # 添加新代理文件夹
+    "kilocode": ".kilocode/",
+    "auggie": ".auggie/",
+    "copilot": ".github/"
+}
+```
+
+### 2. 更新CLI帮助文本
+
+接下来，更新所有相关的帮助文本和示例，以包含新代理的信息。这包括：
+- `--ai`参数的帮助说明
+- 函数文档字符串和示例
+- 包含代理列表的错误消息
+
+### 3. 更新README文档
+
+在`README.md`文件中更新“Supported AI Agents”部分，以包含新代理。确保添加以下信息：
+- 代理的官方网址链接
+- 支持级别（完全支持/部分支持）
+- 任何相关的实现注意事项
+
+### 4. 更新发布包脚本
+
+修改`.github/workflows/scripts/create-release-packages.sh`脚本，以包含新代理的包。具体步骤如下：
+- 将新代理添加到`ALL_AGENTS`数组中
+- 在`case`语句中添加新代理的目录结构处理逻辑
+
+### 5. 更新代理上下文脚本
+
+#### Bash脚本 (`scripts/bash/update-agent-context.sh`)
+
+添加文件变量：
+```bash
+WINDSURF_FILE="$REPO_ROOT/.windsurf/rules/specify-rules.md"
+```
+
+在`case`语句中添加新代理的处理逻辑：
+```bash
+case "$AGENT_TYPE" in
+  # ... existing cases ...
+  windsurf) update_agent_file "$WINDSURF_FILE" "Windsurf" ;;
+  "") 
+    # ... existing checks ...
+    [ -f "$WINDSURF_FILE" ] && update_agent_file "$WINDSURF_FILE" "Windsurf";
+    # Update default creation condition
+    ;;
+esac
+```
+
+#### PowerShell脚本 (`scripts/powershell/update-agent-context.ps1`)
+
+添加文件变量：
+```powershell
+$windsurfFile = Join-Path $repoRoot '.windsurf/rules/specify-rules.md'
+```
+
+在`switch`语句中添加新代理的处理逻辑：
+```powershell
+switch ($AgentType) {
+    # ... existing cases ...
+    'windsurf' { Update-AgentFile $windsurfFile 'Windsurf' }
+    '' {
+        foreach ($pair in @(
+            # ... existing pairs ...
+            @{file=$windsurfFile; name='Windsurf'}
+        )) {
+            if (Test-Path $pair.file) { Update-AgentFile $pair.file $pair.name }
+        }
+        # Update default creation condition
+    }
+}
+```
+
+### 6. 更新CLI工具检查（可选）
+
+对于需要CLI工具的代理，可以在`check()`命令和代理验证中添加检查。例如，为Windsurf添加CLI检查：
+
+```python
+# In check() command
+tracker.add("windsurf", "Windsurf IDE (optional)")
+windsurf_ok = check_tool_for_tracker("windsurf", "https://windsurf.com/", tracker)
+
+# In init validation (only if CLI tool required)
+elif selected_ai == "windsurf":
+    if not check_tool("windsurf", "Install from: https://windsurf.com/"):
+        console.print("[red]Error:[/red] Windsurf CLI is required for Windsurf projects")
+        agent_tool_missing = True
+```
+
+**注意**：对于IDE-based代理（如Copilot、Windsurf），可以跳过CLI检查。
+
+### 7. 测试新代理集成
+
+完成上述更改后，需要进行全面的测试以确保新代理的集成成功。测试步骤包括：
+1. **构建测试**：本地运行包创建脚本
+2. **CLI测试**：测试`specify init --ai <agent>`命令
+3. **文件生成**：验证正确的目录结构和文件生成
+4. **命令验证**：确保生成的命令能与代理正常工作
+5. **上下文更新**：测试代理上下文更新脚本
+
+**Section sources**
+- [AGENTS.md](file://AGENTS.md#L1-L271)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L67-L79)
+- [scripts/bash/update-agent-context.sh](file://scripts/bash/update-agent-context.sh#L0-L199)
+- [scripts/powershell/update-agent-context.ps1](file://scripts/powershell/update-agent-context.ps1#L0-L199)
+
+## 代码风格与测试要求
+
+为了保持代码的一致性和可维护性，Spec-Kit项目遵循严格的代码风格和测试要求。
 
 ### 代码风格
 
-- 遵循 Python 的 PEP 8 规范。
-- 使用 `uv` 进行依赖管理，确保 `pyproject.toml` 文件的准确性。
-
-### 模板变更
-
-当您修改或添加模板时（如 `spec-template.md`、`plan-template.md`），请确保：
-
-- 模板结构清晰，注释明确。
-- 新增的占位符或逻辑不会破坏现有工作流。
-- 变更符合 [memory/constitution.md](file://memory/constitution.md) 中定义的“宪法”原则。
-
-```mermaid
-flowchart TD
-A[用户输入功能描述] --> B[/specify 命令]
-B --> C[自动创建分支]
-C --> D[生成 specs/###-feature-name/ 目录]
-D --> E[填充 spec-template.md]
-E --> F[生成 spec.md]
-F --> G[用户完善规格]
-G --> H[/plan 命令]
-H --> I[生成 plan.md]
-I --> J[/tasks 命令]
-J --> K[生成 tasks.md]
-K --> L[开始实现]
-```
-
-**Diagram sources**
-- [scripts/bash/create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L58)
-- [templates/spec-template.md](file://templates/spec-template.md#L1-L116)
-- [spec-driven.md](file://spec-driven.md#L325-L350)
-
-**Section sources**
-- [templates/spec-template.md](file://templates/spec-template.md#L1-L116)
-- [templates/plan-template.md](file://templates/plan-template.md#L1-L217)
-- [templates/tasks-template.md](file://templates/tasks-template.md#L1-L126)
-
-## 测试流程
-
-测试是贡献流程中不可或缺的一部分。
+- **Python版本**：项目要求使用Python 3.11或更高版本。
+- **依赖管理**：使用`uv`进行包管理。
+- **编码规范**：遵循PEP 8编码规范，并使用`typer`、`rich`等库来增强CLI的用户体验。
 
 ### 测试要求
 
-- **新功能**：必须为新功能编写相应的测试。
-- **现有功能**：修改现有功能时，必须确保所有相关测试仍然通过。
-- **CLI 功能**：使用 `specify check` 命令验证您的更改。
-
-### 测试流程
-
-1. 在 `specs/###-feature-name/` 目录下，根据 `plan.md` 和 `spec.md` 编写测试用例。
-2. 使用 AI 助手执行 `tasks.md` 中的任务，确保测试先于实现（TDD）。
-3. 运行 `specify check` 验证环境和工具。
+- **单元测试**：为所有新功能编写单元测试，确保代码的正确性。
+- **集成测试**：验证新功能与现有系统的集成情况。
+- **测试覆盖率**：确保测试覆盖率达到较高水平，避免遗漏关键路径。
 
 **Section sources**
-- [CONTRIBUTING.md](file://CONTRIBUTING.md#L40-L42)
-- [README.md](file://README.md#L135-L137)
+- [CONTRIBUTING.md](file://CONTRIBUTING.md#L1-L110)
+- [pyproject.toml](file://pyproject.toml#L1-L23)
 
-## Pull Request 审查标准
+## 提交信息规范
 
-您的 PR 将根据以下标准进行审查：
+良好的提交信息有助于维护者理解每次更改的目的和内容。请遵循以下规范：
 
-### CLI 功能变更
-
-- 是否影响 `specify init` 或 `specify check` 的核心功能？
-- 是否提供了清晰的文档更新？
-- 是否通过了所有本地测试？
-
-### 模板变更
-
-- 是否破坏了现有的 `/specify`, `/plan`, `/tasks` 命令流程？
-- 是否遵循了模板中的注释和结构约束？
-- 是否在 `memory/constitution.md` 的原则范围内？
-
-### 脚本修改
-
-- Bash 和 PowerShell 脚本是否保持功能对等？
-- 是否有充分的错误处理和日志输出？
-- 是否避免了硬编码路径？
+- **简洁明了**：提交信息应简洁明了，准确描述更改内容。
+- **使用动词开头**：例如，“Add support for Windsurf”而不是“Added support for Windsurf”。
+- **关联问题**：如果提交与某个问题相关，请在提交信息中引用该问题编号，例如“Fix #123”。
 
 **Section sources**
-- [CONTRIBUTING.md](file://CONTRIBUTING.md#L20-L47)
-- [spec-driven.md](file://spec-driven.md#L325-L350)
+- [CONTRIBUTING.md](file://CONTRIBUTING.md#L1-L110)
 
-## 行为准则
+## 结论
 
-本项目遵循 [贡献者契约行为准则](file://CODE_OF_CONDUCT.md)。我们致力于营造一个开放、包容的社区环境。
-
-### 我们的承诺
-
-作为贡献者和维护者，我们承诺确保本项目和社区对所有人来说都是一个免受骚扰的环境，无论其年龄、体型、残疾、种族、性别认同与表达、经验水平、国籍、外貌、种族、宗教或性取向。
-
-### 可接受的行为
-
-- 使用欢迎和包容性的语言
-- 尊重不同的观点和经历
-- 优雅地接受建设性批评
-- 关注对社区最有利的事情
-- 对其他社区成员表现出同理心
-
-### 不可接受的行为
-
-- 使用性化语言或图像，以及不受欢迎的性关注或挑逗
-- 恶意灌水、侮辱/贬低性评论，以及人身或政治攻击
-- 公开或私下骚扰
-- 未经明确许可发布他人的私人信息
-- 其他在专业环境中可能被视为不适当的行为
-
-如果您发现任何违反行为准则的行为，请联系项目团队：opensource@github.com。
+通过遵循本贡献指南，您可以有效地为Spec-Kit项目做出贡献。无论是报告问题、提出功能请求还是提交代码更改，您的参与都将帮助项目不断进步。特别地，添加对新AI代理的支持是一个重要的扩展点，能够显著提升项目的适用范围和灵活性。请确保在贡献过程中遵守代码风格、测试要求和提交信息规范，以确保贡献的质量和一致性。
 
 **Section sources**
-- [CODE_OF_CONDUCT.md](file://CODE_OF_CONDUCT.md#L1-L73)
-
-## 贡献示例
-
-### 添加新模板
-
-1. Fork 仓库并创建新分支：`git checkout -b add-new-template`
-2. 在 `templates/` 目录下创建新模板文件，例如 `new-feature-template.md`。
-3. 确保模板包含必要的占位符和注释。
-4. 更新 `README.md` 中的 CLI 参考文档。
-5. 提交 PR。
-
-### 支持新的 AI 助手
-
-1. 创建分支：`git checkout -b support-new-ai`
-2. 在 `scripts/bash/` 和 `scripts/powershell/` 中添加新的脚本，例如 `setup-new-ai.sh`。
-3. 修改 `specify_cli` 的初始化逻辑以支持新助手。
-4. 在 `README.md` 中添加新助手的安装说明。
-5. 提交 PR。
-
-### 改进 CLI 用户体验
-
-1. 创建分支：`git checkout -b improve-cli-ux`
-2. 修改 `src/specify_cli/__init__.py` 中的命令逻辑。
-3. 添加新的选项或改进现有选项的提示信息。
-4. 确保所有更改都通过 `uv run specify --help` 验证。
-5. 提交 PR。
-
-**Section sources**
-- [README.md](file://README.md#L115-L137)
-- [spec-driven.md](file://spec-driven.md#L325-L350)
-
-## 故障排除
-
-### Git Credential Manager on Linux
-
-如果在 Linux 上遇到 Git 认证问题，可以安装 Git Credential Manager：
-
-```bash
-#!/usr/bin/env bash
-set -e
-echo "Downloading Git Credential Manager v2.6.1..."
-wget https://github.com/git-ecosystem/git-credential-manager/releases/download/v2.6.1/gcm-linux_amd64.2.6.1.deb
-echo "Installing Git Credential Manager..."
-sudo dpkg -i gcm-linux_amd64.2.6.1.deb
-echo "Configuring Git to use GCM..."
-git config --global credential.helper manager
-echo "Cleaning up..."
-rm gcm-linux_amd64.2.6.1.deb
-```
-
-**Section sources**
-- [README.md](file://README.md#L405-L420)
+- [CONTRIBUTING.md](file://CONTRIBUTING.md#L1-L110)
+- [AGENTS.md](file://AGENTS.md#L1-L271)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L67-L79)
