--- a/.qoder/repowiki/zh/content/项目概述.md
+++ b/.qoder/repowiki/zh/content/项目概述.md
@@ -1,170 +1,303 @@
-<docs>
 # 项目概述
 
 <cite>
-**本文档引用的文件**  
-- [README.md](file://README.md) - *更新了项目启动流程和CLI命令*
-- [spec-driven.md](file://spec-driven.md) - *详细阐述了规范驱动开发范式*
-- [memory/constitution.md](file://memory\constitution.md) - *项目宪法模板，定义核心原则*
-- [templates/spec-template.md](file://templates/spec-template.md) - *功能规范模板*
-- [templates/plan-template.md](file://templates/plan-template.md) - *实施计划模板*
-- [templates/tasks-template.md](file://templates/tasks-template.md) - *任务列表模板*
-- [src/specify_cli/__init__.py](file://src\specify_cli/__init__.py) - *CLI核心功能实现*
-- [scripts/bash/create-new-feature.sh](file://scripts/bash/create-new-feature.sh) - *创建新功能的脚本*
-- [scripts/bash/setup-plan.sh](file://scripts/bash/setup-plan.sh) - *设置实施计划的脚本*
-- [scripts/bash/common.sh](file://scripts/bash/common.sh) - *脚本共享函数库*
+**本文档引用的文件**
+- [README.md](file://README.md)
+- [spec-driven.md](file://spec-driven.md)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py)
+- [templates/spec-template.md](file://templates/spec-template.md)
+- [templates/plan-template.md](file://templates/plan-template.md)
+- [templates/tasks-template.md](file://templates/tasks-template.md)
+- [templates/agent-file-template.md](file://templates/agent-file-template.md)
+- [scripts/bash/create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
+- [scripts/bash/setup-plan.sh](file://scripts/bash/setup-plan.sh)
+- [scripts/bash/update-agent-context.sh](file://scripts/bash/update-agent-context.sh)
+- [scripts/bash/common.sh](file://scripts/bash/common.sh)
 </cite>
-
-## 更新摘要
-**变更内容**   
-- 根据最新的`README.md`更新了项目简介和核心理念部分
-- 扩展了CLI命令详解，增加了`/constitution`和`/implement`命令说明
-- 更新了典型工作流图示，反映完整的六步流程
-- 增强了系统架构描述，更准确地反映实际文件结构
-- 添加了对PowerShell脚本支持的说明
 
 ## 目录
 1. [简介](#简介)
-2. [核心理念](#核心理念)
-3. [系统架构](#系统架构)
-4. [CLI命令详解](#cli命令详解)
-5. [宪法式治理](#宪法式治理)
-6. [模板系统](#模板系统)
-7. [典型工作流](#典型工作流)
-8. [高级功能](#高级功能)
+2. [项目结构](#项目结构)
+3. [核心组件](#核心组件)
+4. [架构概述](#架构概述)
+5. [详细组件分析](#详细组件分析)
+6. [依赖分析](#依赖分析)
+7. [性能考量](#性能考量)
+8. [故障排除指南](#故障排除指南)
 9. [结论](#结论)
 
 ## 简介
 
-spec-kit 是一个规范驱动开发（Spec-Driven Development, SDD）的工具包，旨在通过将规范作为可执行的源代码来重构软件开发流程。该项目颠覆了传统开发中"代码为王"的模式，使规范成为生成实现的源头，从而消除规范与实现之间的鸿沟。通过与AI助手（如Claude、Gemini）的深度集成，spec-kit 实现了从想法到可执行任务的自动化流程，显著提升了开发效率和质量。
-
-该工具包允许组织专注于产品场景而非编写无差异化的代码。SDD范式将规范提升为主要工件，代码则成为其在特定语言和框架中的表达形式。通过多步骤细化过程，而非一次性从提示生成代码，充分利用先进AI模型的能力来解释和实现复杂规范。
+Spec-Kit 是一个旨在通过规范驱动开发（SDD）方法论来加速高质量软件构建的工具集。该项目颠覆了传统以代码为中心的开发模式，将规范提升为可执行的首要工件，使代码成为规范的具体实现。通过与AI代理协同工作，Spec-Kit实现了从自然语言需求到可执行代码的自动化流程，极大地提升了开发效率和团队协作的规范性。
 
 **Section sources**
-- [README.md](file://README.md#L1-L50)
-- [spec-driven.md](file://spec-driven.md#L1-L50)
+- [README.md](file://README.md#L1-L582)
+- [spec-driven.md](file://spec-driven.md#L1-L403)
 
-## 核心理念
+## 项目结构
 
-spec-kit 的核心哲学是"意图驱动开发"，强调在确定"如何实现"之前先明确"需要什么"和"为什么需要"。该工具包通过多步骤细化过程，而非一次性从提示生成代码，充分利用先进AI模型的能力来解释和实现复杂规范。SDD范式将规范提升为主要工件，代码则成为其在特定语言和框架中的表达形式。
+Spec-Kit项目的结构清晰地划分了不同功能的组件，主要包括CLI工具、脚本系统、模板系统和文档。其核心目录结构如下：
 
-SDD反转了传统的软件开发权力结构：规范不再服务于代码，而是代码服务于规范。产品需求文档（PRD）不再是实现的指南，而是生成实现的源头。技术计划不是指导编码的文档，而是产生代码的精确定义。这种转变使得规范与实现之间的差距得以消除，因为它们都源于可执行的规范。
+```
+.
+├── memory
+│   └── constitution.md          # 项目宪法，定义架构原则
+├── scripts                      # 脚本系统，包含Bash和PowerShell脚本
+│   ├── bash
+│   │   ├── check-prerequisites.sh
+│   │   ├── common.sh
+│   │   ├── create-new-feature.sh
+│   │   ├── setup-plan.sh
+│   │   └── update-agent-context.sh
+│   └── powershell
+│       ├── check-prerequisites.ps1
+│       ├── common.ps1
+│       ├── create-new-feature.ps1
+│       ├── setup-plan.ps1
+│       └── update-agent-context.ps1
+├── src/specify_cli
+│   └── __init__.py              # CLI工具的主模块
+├── templates                    # 模板系统，定义各种文档的结构
+│   ├── commands
+│   │   ├── analyze.md
+│   │   ├── clarify.md
+│   │   ├── constitution.md
+│   │   ├── implement.md
+│   │   ├── plan.md
+│   │   ├── specify.md
+│   │   └── tasks.md
+│   ├── agent-file-template.md
+│   ├── plan-template.md
+│   ├── spec-template.md
+│   └── tasks-template.md
+├── AGENTS.md
+├── CHANGELOG.md
+├── CODE_OF_CONDUCT.md
+├── CONTRIBUTING.md
+├── README.md
+├── SECURITY.md
+├── SUPPORT.md
+├── pyproject.toml
+└── spec-driven.md
+```
 
-**Section sources**
-- [README.md](file://README.md#L100-L150)
-- [spec-driven.md](file://spec-driven.md#L100-L200)
-
-## 系统架构
+该结构体现了模块化设计，将CLI工具、自动化脚本和文档模板分离，便于维护和扩展。
 
 ```mermaid
 graph TB
-subgraph "用户交互层"
-CLI[CLI命令]
-AI[AI助手]
+subgraph "核心组件"
+CLI["CLI工具 (specify_cli)"]
+Scripts["脚本系统 (scripts)"]
+Templates["模板系统 (templates)"]
 end
-subgraph "处理层"
-Specify[/specify 命令]
-Plan[/plan 命令]
-Tasks[/tasks 命令]
-Implement[/implement 命令]
-Constitution[/constitution 命令]
+subgraph "文档与配置"
+Memory["宪法 (memory/constitution.md)"]
+Docs["文档 (README.md, spec-driven.md)"]
 end
-subgraph "模板系统"
-SpecTemplate[spec-template.md]
-PlanTemplate[plan-template.md]
-TasksTemplate[tasks-template.md]
-end
-subgraph "脚本支持"
-Bash[scripts/bash]
-PowerShell[scripts/powershell]
-end
-subgraph "治理层"
-ConstitutionDoc[constitution.md]
-end
-CLI --> Specify
-CLI --> Plan
-CLI --> Tasks
-CLI --> Implement
-CLI --> Constitution
-Specify --> SpecTemplate
-Plan --> PlanTemplate
-Tasks --> TasksTemplate
-Bash --> Specify
-Bash --> Plan
-Bash --> Tasks
-Bash --> Implement
-Bash --> Constitution
-PowerShell --> Specify
-PowerShell --> Plan
-PowerShell --> Tasks
-PowerShell --> Implement
-PowerShell --> Constitution
-ConstitutionDoc --> Plan
-ConstitutionDoc --> Tasks
+CLI --> Scripts
+Scripts --> Templates
+Templates --> Memory
+CLI --> Docs
 ```
 
 **Diagram sources**
-- [README.md](file://README.md#L200-L300)
-- [spec-driven.md](file://spec-driven.md#L300-L400)
+- [README.md](file://README.md#L1-L582)
+- [project_structure](file://project_structure)
 
 **Section sources**
-- [README.md](file://README.md#L200-L300)
-- [spec-driven.md](file://spec-driven.md#L300-L400)
+- [README.md](file://README.md#L1-L582)
+- [project_structure](file://project_structure)
 
-## CLI命令详解
+## 核心组件
 
-spec-kit 提供了五个核心CLI命令，实现了从想法到可执行任务再到完整实现的自动化流程：
-
-### /constitution 命令
-
-该命令用于创建或更新项目的治理原则和开发指南，这些原则将指导所有后续开发：
-
-- **原则制定**：创建项目的基础准则，包括代码质量、测试标准、用户体验一致性和性能要求
-- **治理框架**：建立决策机制，确保技术决策和实现选择的一致性
-- **宪法文件**：创建或更新 `/memory/constitution.md` 文件，作为AI代理的参考依据
+Spec-Kit的核心组件包括CLI工具、脚本系统和模板系统。CLI工具（`specify_cli`）是用户与项目交互的主要入口，负责初始化项目和检查环境。脚本系统提供了一系列Bash和PowerShell脚本，用于自动化创建新功能、设置计划和更新AI代理上下文等任务。模板系统则定义了规范、计划和任务等文档的结构，确保生成的文档具有一致性和完整性。
 
 **Section sources**
-- [README.md](file://README.md#L250-L260)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L1-L799)
+- [scripts/bash/create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L97)
+- [scripts/bash/setup-plan.sh](file://scripts/bash/setup-plan.sh#L1-L60)
+- [templates/spec-template.md](file://templates/spec-template.md#L1-L116)
+- [templates/plan-template.md](file://templates/plan-template.md#L1-L225)
+- [templates/tasks-template.md](file://templates/tasks-template.md#L1-L126)
 
-### /specify 命令
+## 架构概述
 
-该命令将功能描述转换为结构化的规范，自动管理仓库：
+Spec-Kit的架构遵循规范驱动开发的核心理念，通过CLI命令与AI代理协同工作，实现从需求到代码的自动化流程。其架构模式包括模板方法模式、命令模式和配置即代码的实践。CLI工具作为前端，接收用户命令并调用相应的脚本和模板。脚本系统执行具体的自动化任务，而模板系统则确保生成的文档符合预定义的结构和质量标准。
 
-- **自动特征编号**：扫描现有规范以确定下一个特征编号
-- **分支创建**：根据描述生成语义化分支名称并自动创建
-- **模板化生成**：复制并定制特征规范模板
-- **目录结构**：创建 `specs/[branch-name]/` 结构
+```mermaid
+sequenceDiagram
+participant 用户 as "用户"
+participant CLI as "CLI工具"
+participant 脚本 as "脚本系统"
+participant 模板 as "模板系统"
+participant AI代理 as "AI代理"
+用户->>CLI : specify init <项目名>
+CLI->>脚本 : 调用 create-new-feature.sh
+脚本->>模板 : 复制 spec-template.md
+模板-->>脚本 : 返回 spec.md
+脚本-->>CLI : 返回新功能信息
+CLI-->>用户 : 项目初始化完成
+用户->>AI代理 : /specify 描述需求
+AI代理->>模板 : 填充 spec-template.md
+模板-->>AI代理 : 返回完整的 spec.md
+AI代理->>用户 : 规范创建完成
+用户->>AI代理 : /plan 技术栈选择
+AI代理->>模板 : 填充 plan-template.md
+模板-->>AI代理 : 返回完整的 plan.md
+AI代理->>用户 : 计划生成完成
+用户->>AI代理 : /tasks
+AI代理->>模板 : 填充 tasks-template.md
+模板-->>AI代理 : 返回完整的 tasks.md
+AI代理->>用户 : 任务列表生成完成
+```
+
+**Diagram sources**
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L1-L799)
+- [scripts/bash/create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L97)
+- [templates/spec-template.md](file://templates/spec-template.md#L1-L116)
+- [templates/plan-template.md](file://templates/plan-template.md#L1-L225)
+- [templates/tasks-template.md](file://templates/tasks-template.md#L1-L126)
+
+## 详细组件分析
+
+### CLI工具分析
+
+CLI工具是Spec-Kit的入口点，使用typer框架构建，提供了`init`和`check`等命令。它负责初始化新项目，下载并解压模板，以及检查系统要求。
+
+```mermaid
+classDiagram
+class SpecifyCLI {
++init(project_name : str, ai_assistant : str, script_type : str)
++check()
+}
+class StepTracker {
++add(key : str, label : str)
++start(key : str, detail : str)
++complete(key : str, detail : str)
++error(key : str, detail : str)
++skip(key : str, detail : str)
++render()
+}
+SpecifyCLI --> StepTracker : "使用"
+```
+
+**Diagram sources**
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L1-L799)
 
 **Section sources**
-- [README.md](file://README.md#L300-L350)
-- [spec-driven.md](file://spec-driven.md#L400-L450)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L1-L799)
 
-### /plan 命令
+### 脚本系统分析
 
-在特征规范存在后，该命令创建全面的实施计划：
+脚本系统包含一系列Bash和PowerShell脚本，用于自动化项目中的各种任务。`create-new-feature.sh`脚本负责创建新功能分支和规范文件，`setup-plan.sh`脚本用于设置实施计划，`update-agent-context.sh`脚本则更新AI代理的上下文文件。
 
-- **规范分析**：读取和理解特征需求、用户故事和验收标准
-- **宪法合规性**：确保与项目宪法和架构原则一致
-- **技术转换**：将业务需求转化为技术架构和实施细节
-- **详细文档**：生成数据模型、API合同和测试场景的支持文档
+```mermaid
+flowchart TD
+Start([开始]) --> CreateFeature["create-new-feature.sh"]
+CreateFeature --> FindRepo["查找仓库根目录"]
+FindRepo --> CheckGit{"Git仓库?"}
+CheckGit --> |是| CreateBranch["创建功能分支"]
+CheckGit --> |否| UseFeatureEnv["使用SPECIFY_FEATURE环境变量"]
+CreateBranch --> CreateSpecDir["创建规范目录"]
+CreateSpecDir --> CopyTemplate["复制spec-template.md"]
+CopyTemplate --> SetEnv["设置SPECIFY_FEATURE环境变量"]
+SetEnv --> End([结束])
+```
 
-**Section sources**
-- [README.md](file://README.md#L350-L400)
-- [spec-driven.md](file://spec-driven.md#L450-L500)
-
-### /tasks 命令
-
-在计划创建后，该命令分析计划和相关设计文档以生成可执行任务列表：
-
-- **输入**：读取 `plan.md`（必需）以及 `data-model.md`、`contracts/` 和 `research.md`（如果存在）
-- **任务推导**：将合同、实体和场景转换为具体任务
-- **并行化**：标记独立任务 `[P]` 并概述安全的并行组
-- **输出**：在特征目录中写入 `tasks.md`，准备由任务代理执行
+**Diagram sources**
+- [scripts/bash/create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L97)
+- [scripts/bash/common.sh](file://scripts/bash/common.sh#L1-L113)
 
 **Section sources**
-- [README.md](file://README.md#L400-L450)
-- [spec-driven.md](file://spec-driven.md#L500-L550)
+- [scripts/bash/create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L97)
+- [scripts/bash/common.sh](file://scripts/bash/common.sh#L1-L113)
 
-### /implement 命令
+### 模板系统分析
 
-该命令执行所有任务并根据计划
+模板系统是Spec-Kit的核心，定义了规范、计划和任务等文档的结构。`spec-template.md`模板确保规范文档专注于用户需求和业务价值，避免技术实现细节。`plan-template.md`模板则将业务需求转化为技术架构和实施细节，`tasks-template.md`模板生成可执行的任务列表。
+
+```mermaid
+erDiagram
+SPEC_TEMPLATE {
+string feature_name
+string feature_branch
+string created_date
+string status
+string input_arguments
+}
+PLAN_TEMPLATE {
+string feature_name
+string branch_name
+string created_date
+string spec_link
+string language_version
+string primary_dependencies
+string storage
+string testing
+string target_platform
+}
+TASKS_TEMPLATE {
+string feature_name
+string input_docs
+string prerequisites
+string task_id
+string parallel
+string description
+string file_path
+}
+SPEC_TEMPLATE ||--o{ PLAN_TEMPLATE : "生成"
+PLAN_TEMPLATE ||--o{ TASKS_TEMPLATE : "生成"
+```
+
+**Diagram sources**
+- [templates/spec-template.md](file://templates/spec-template.md#L1-L116)
+- [templates/plan-template.md](file://templates/plan-template.md#L1-L225)
+- [templates/tasks-template.md](file://templates/tasks-template.md#L1-L126)
+
+**Section sources**
+- [templates/spec-template.md](file://templates/spec-template.md#L1-L116)
+- [templates/plan-template.md](file://templates/plan-template.md#L1-L225)
+- [templates/tasks-template.md](file://templates/tasks-template.md#L1-L126)
+
+## 依赖分析
+
+Spec-Kit的依赖关系清晰，CLI工具依赖于typer、rich等Python库，脚本系统依赖于系统的shell环境，模板系统则独立于具体技术栈。外部依赖包括AI代理（如Claude Code、GitHub Copilot等）、uv包管理器、Python 3.11+和Git。
+
+```mermaid
+graph LR
+A[specify_cli] --> B[typer]
+A --> C[rich]
+A --> D[platformdirs]
+A --> E[readchar]
+A --> F[httpx]
+G[create-new-feature.sh] --> H[Bash]
+I[setup-plan.sh] --> H
+J[update-agent-context.sh] --> H
+K[spec-template.md] --> L[Markdown]
+M[plan-template.md] --> L
+N[tasks-template.md] --> L
+```
+
+**Diagram sources**
+- [pyproject.toml](file://pyproject.toml)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L1-L799)
+
+**Section sources**
+- [pyproject.toml](file://pyproject.toml)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L1-L799)
+
+## 性能考量
+
+Spec-Kit的设计注重效率和可维护性。通过模板和脚本自动化重复性任务，减少了人为错误，提高了开发速度。CLI工具的初始化过程通过并行下载和解压模板来优化性能。脚本系统通过环境变量和函数复用避免了重复代码，提高了执行效率。
+
+## 故障排除指南
+
+当使用Spec-Kit时，可能会遇到一些常见问题。例如，在Linux上使用Git时，可能需要安装Git Credential Manager来解决认证问题。如果AI代理无法找到，可以使用`--ignore-agent-tools`选项跳过检查。对于CLI工具的详细调试信息，可以使用`--debug`选项。
+
+**Section sources**
+- [README.md](file://README.md#L1-L582)
+- [scripts/bash/check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L1-L165)
+
+## 结论
+
+Spec-Kit通过规范驱动开发的方法论，提供了一套完整的工具集，实现了从自然语言需求到可执行代码的自动化流程。其核心价值在于将规范提升为可执行的首要工件，通过CLI工具、脚本系统和模板系统的协同工作，确保了开发过程的规范性和一致性。这不仅提升了开发效率，还促进了团队协作的统一，为现代软件开发提供了一种创新的解决方案。
